# crawler

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/: constants.py  database.py  logger.py  main.py  messaging.py  politeness.py  settings.py
tests/: test_messaging.py  test_politeness_checker.py
