[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "Search engine web crawler"
authors = ["Vlad-Sebastian Cretu <vlad.sebastian.cretu.dev@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8"
fastapi = "^0.103"
uvicorn = "^0.23"
beautifulsoup4 = "^4.12"
motor = "^3.3"
pydantic-settings = "^2.0"
pymongo = "^4.5"
aiokafka = "^0.8"
tikv-client = "^0.0.3"
pyngleton = "^0.0"
redis = "^5.0"
neo4j = "^5.12"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
